Change test repository owner and name
Updated test repository configuration for testing.

--- a/.env.test.example
+++ b/.env.test.example
@@ -5,9 +5,5 @@ GITHUB_TOKEN=ghp_your_token_here
 
 # Test Repository Configuration
 # Use a dedicated test repository or the main repo with test labels
-TEST_OWNER=rriesco
-TEST_REPO=quant-ai-test
-
-# Alternative: Use main repo with test labels
-# TEST_OWNER=rriesco
-# TEST_REPO=quant-ai
+TEST_OWNER=user-test
+TEST_REPO=repo-test
